Fix wrapping of list of clients.

--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -24,6 +24,7 @@
   #task_customers {
     clear: both;
     .customer {
+      margin-left: 85px;
       clear: both; } }
   .watcher .removeLink, #task_customers .removeLink {
     float: right; } }
